modify reset password page UI

--- a/TWJieShuQuan/Authentication/Controllers/ResetPasswordViewController.xib
+++ b/TWJieShuQuan/Authentication/Controllers/ResetPasswordViewController.xib
@@ -16,8 +16,11 @@
             <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="**@thoughtworks" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="h31-iV-PiH" customClass="CustomTextField">
-                    <rect key="frame" x="237" y="176" width="131" height="30"/>
+                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="**@thoughtworks" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="h31-iV-PiH">
+                    <rect key="frame" x="167" y="176" width="272" height="30"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="272" id="XzH-6j-LoA"/>
+                    </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits"/>
                 </textField>
@@ -31,7 +34,7 @@
                     </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="36U-r6-PN3">
-                    <rect key="frame" x="279" y="386" width="30" height="30"/>
+                    <rect key="frame" x="22" y="27" width="30" height="30"/>
                     <state key="normal" title="返回">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
@@ -42,13 +45,21 @@
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
+                <constraint firstItem="36U-r6-PN3" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="22" id="1hI-Xz-VTJ"/>
                 <constraint firstItem="h31-iV-PiH" firstAttribute="centerX" secondItem="qHY-ZA-hc5" secondAttribute="centerX" constant="2.5" id="KfN-Sd-qDD"/>
+                <constraint firstItem="36U-r6-PN3" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="27" id="Mcp-3M-tV5"/>
                 <constraint firstItem="h31-iV-PiH" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="176" id="Rwz-IZ-8fx"/>
                 <constraint firstItem="36U-r6-PN3" firstAttribute="top" secondItem="qHY-ZA-hc5" secondAttribute="bottom" constant="79" id="h6J-xW-ywW"/>
                 <constraint firstItem="36U-r6-PN3" firstAttribute="centerX" secondItem="qHY-ZA-hc5" secondAttribute="centerX" constant="-6" id="omb-ue-tAZ"/>
                 <constraint firstItem="h31-iV-PiH" firstAttribute="top" secondItem="qHY-ZA-hc5" secondAttribute="top" constant="-101" id="sh0-6a-2tk"/>
                 <constraint firstAttribute="centerX" secondItem="h31-iV-PiH" secondAttribute="centerX" constant="-2.5" id="ugp-mo-Y1y"/>
             </constraints>
+            <variation key="default">
+                <mask key="constraints">
+                    <exclude reference="h6J-xW-ywW"/>
+                    <exclude reference="omb-ue-tAZ"/>
+                </mask>
+            </variation>
             <connections>
                 <action selector="backgroundPressed:" destination="-1" eventType="touchDown" id="TRi-3w-NIa"/>
             </connections>
