set up find view

--- a/TWJieShuQuan/main.storyboard
+++ b/TWJieShuQuan/main.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7702" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="McA-zT-FMQ">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7531" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="McA-zT-FMQ">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7701"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7520"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
@@ -119,8 +119,8 @@
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="cAK-yb-zyt" id="fOk-KY-9wu">
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="我的书籍" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2VV-UY-YNm">
-                                                    <rect key="frame" x="23" y="15" width="68" height="21"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="我的书籍" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2VV-UY-YNm">
+                                                    <rect key="frame" x="23" y="14" width="68" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
@@ -312,7 +312,76 @@
                     <view key="view" contentMode="scaleToFill" id="x08-j4-PqF">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="68" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="WHh-HU-i1v">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" rowHeight="68" id="tKc-xV-dvT" customClass="FindCell">
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="tKc-xV-dvT" id="eVH-ta-1T5">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="bFd-la-CRE">
+                                                    <rect key="frame" x="8" y="8" width="30" height="30"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="30" id="9U7-uj-JT0"/>
+                                                        <constraint firstAttribute="width" constant="30" id="LTY-Nu-e5d"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DzY-cY-0Ti">
+                                                    <rect key="frame" x="46" y="37" width="42" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qi9-yE-E2c">
+                                                    <rect key="frame" x="562" y="8" width="30" height="17"/>
+                                                    <fontDescription key="fontDescription" name="HelveticaNeue-UltraLight" family="Helvetica Neue" pointSize="14"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hwP-Ue-YvG">
+                                                    <rect key="frame" x="46" y="8" width="40" height="21"/>
+                                                    <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="17"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="Qi9-yE-E2c" firstAttribute="top" secondItem="eVH-ta-1T5" secondAttribute="top" constant="8" id="0Ve-aZ-8t2"/>
+                                                <constraint firstItem="bFd-la-CRE" firstAttribute="leading" secondItem="eVH-ta-1T5" secondAttribute="leading" constant="8" id="3mh-wk-zBg"/>
+                                                <constraint firstItem="hwP-Ue-YvG" firstAttribute="top" secondItem="eVH-ta-1T5" secondAttribute="top" constant="8" id="FHj-Ob-F0Z"/>
+                                                <constraint firstItem="DzY-cY-0Ti" firstAttribute="top" secondItem="hwP-Ue-YvG" secondAttribute="bottom" constant="8" id="Jsn-HA-rKF"/>
+                                                <constraint firstItem="hwP-Ue-YvG" firstAttribute="leading" secondItem="DzY-cY-0Ti" secondAttribute="leading" id="NKx-SA-Vjf"/>
+                                                <constraint firstItem="bFd-la-CRE" firstAttribute="top" secondItem="eVH-ta-1T5" secondAttribute="top" constant="8" id="Rw3-A9-9u7"/>
+                                                <constraint firstAttribute="bottom" secondItem="DzY-cY-0Ti" secondAttribute="bottom" constant="9" id="axw-TH-CYf"/>
+                                                <constraint firstAttribute="trailing" secondItem="Qi9-yE-E2c" secondAttribute="trailing" constant="8" id="iFj-g8-yWF"/>
+                                                <constraint firstItem="hwP-Ue-YvG" firstAttribute="leading" secondItem="bFd-la-CRE" secondAttribute="trailing" constant="8" id="ifE-n7-Xn8"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="avatar" destination="bFd-la-CRE" id="666-8v-q1G"/>
+                                            <outlet property="content" destination="DzY-cY-0Ti" id="8WR-Uo-IPf"/>
+                                            <outlet property="name" destination="hwP-Ue-YvG" id="svn-kD-6e2"/>
+                                            <outlet property="time" destination="Qi9-yE-E2c" id="0js-BI-hYw"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="Og8-Xq-qPb" id="sZf-U3-r4N"/>
+                                    <outlet property="delegate" destination="Og8-Xq-qPb" id="iJQ-CN-Ts0"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="WHh-HU-i1v" firstAttribute="top" secondItem="x08-j4-PqF" secondAttribute="top" id="4Xz-zu-eMT"/>
+                            <constraint firstAttribute="bottom" secondItem="WHh-HU-i1v" secondAttribute="bottom" id="7mj-du-Vs1"/>
+                            <constraint firstAttribute="trailing" secondItem="WHh-HU-i1v" secondAttribute="trailing" id="UW9-EO-wiS"/>
+                            <constraint firstItem="WHh-HU-i1v" firstAttribute="leading" secondItem="x08-j4-PqF" secondAttribute="leading" id="vQx-VJ-2Pq"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="发现" id="7ro-LT-C1q"/>
                 </viewController>
